--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "gulp-inject-js-html",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "a gulp plugin to injects javascript under a script tag",
   "main": "index.js",
   "scripts": {
     "start": "gulp"
   },
   "keywords": [
-    "gulpplugin"
+    "gulp,plugin,inject,js,html"
   ],
   "license": "ISC",
   "dependencies": {
